TRUNK GS : cosmetic changes (use polymorphism instead of instanceof and cast, use interface instead of implementation)
git-svn-id: http://svn.l2jfree.com/l2jfree@1149 6ff00ba9-25cd-4355-987e-099c62bc2628