@@ -18,6 +18,9 @@
  */
 package net.sf.l2j.gameserver.templates;
 
+import java.util.List;
+import java.util.Map;
+
 import javolution.util.FastList;
 import javolution.util.FastMap;
 import net.sf.l2j.gameserver.model.L2DropCategory;
@@ -74,16 +77,16 @@ public final class L2NpcTemplate extends L2CharTemplate
     public int     race;
     
     /** The table containing all Item that can be dropped by L2NpcInstance using this L2NpcTemplate*/
-    private final FastList<L2DropCategory> _categories = new FastList<L2DropCategory>();   
+    private final List<L2DropCategory> _categories = new FastList<L2DropCategory>();   
     
     /** The table containing all Minions that must be spawn with the L2NpcInstance using this L2NpcTemplate*/
-    private final FastList<L2MinionData>  _minions     = new FastList<L2MinionData>(0);
+    private final List<L2MinionData>  _minions     = new FastList<L2MinionData>(0);
     
-    private FastList<ClassId>             _teachInfo;
-    private FastMap<Integer, L2Skill> _skills;
-    private FastMap<Stats, Integer> _resists;
+    private List<ClassId>             _teachInfo;
+    private Map<Integer, L2Skill> _skills;
+    private Map<Stats, Integer> _resists;
 	// contains a list of quests for each event type (questStart, questAttack, questKill, etc)
-	private FastMap<Quest.QuestEventType, Quest[]> _questEvents;
+	private Map<Quest.QuestEventType, Quest[]> _questEvents;
 	
 
 
@@ -137,7 +140,7 @@ public final class L2NpcTemplate extends L2CharTemplate
         _teachInfo.add(classId);
     }
     
-    public FastList<ClassId> getTeachInfo()
+    public List<ClassId> getTeachInfo()
     {
         return _teachInfo;
     }
@@ -218,7 +221,7 @@ public final class L2NpcTemplate extends L2CharTemplate
     /**
      * Return the list of all possible UNCATEGORIZED drops of this L2NpcTemplate.<BR><BR>
      */
-    public FastList<L2DropCategory> getDropData()
+    public List<L2DropCategory> getDropData()
     {
         return _categories;
     }   
@@ -227,7 +230,7 @@ public final class L2NpcTemplate extends L2CharTemplate
      * Return the list of all possible item drops of this L2NpcTemplate.<BR>
      * (ie full drops and part drops, mats, miscellaneous & UNCATEGORIZED)<BR><BR>
      */
-    public FastList<L2DropData> getAllDropData()
+    public List<L2DropData> getAllDropData()
     {
         FastList<L2DropData> lst = new FastList<L2DropData>();
         for (L2DropCategory tmp:_categories)
@@ -244,8 +247,8 @@ public final class L2NpcTemplate extends L2CharTemplate
     {
         while (_categories.size() > 0)
         {
-            _categories.getFirst().clearAllDrops();
-            _categories.removeFirst();
+            _categories.get(0).clearAllDrops();
+            _categories.remove(0);
         }
         _categories.clear();
     }
@@ -253,12 +256,12 @@ public final class L2NpcTemplate extends L2CharTemplate
     /**
      * Return the list of all Minions that must be spawn with the L2NpcInstance using this L2NpcTemplate.<BR><BR>
      */
-    public FastList<L2MinionData> getMinionData()
+    public List<L2MinionData> getMinionData()
     {
         return _minions;
     }
 
-    public FastMap<Integer, L2Skill> getSkills()
+    public Map<Integer, L2Skill> getSkills()
     {
         return _skills;
     }
